<resources>
    <string name="app_name">CatalogueMovieFinal</string>

    <!-- Set values for search as well as hints -->
    <string name="search">Search</string>

    <!-- Set keyword value title -->
    <string name="keyword_title">Keyword :</string>

    <!-- Set values for Movie data placeholder -->
    <string name="movie_title_text">Movie Title</string>
    <string name="movie_ratings_text">Ratings</string>
    <string name="movie_release_date_text">Release Date</string>
    <string name="movie_language_text">Language</string>

    <!-- Set values for TV Show data placeholder -->
    <string name="tv_show_name_text">TV Show Name</string>
    <string name="tv_show_ratings_text">Ratings</string>
    <string name="tv_show_first_air_date_text">First Air Date</string>
    <string name="tv_show_language_text">Language</string>

    <!-- Set action bar title -->
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv_show">Search TV Show</string>
    <string name="settings">Settings</string>

    <!-- Set Detailed Movie section value placeholder -->
    <string name="detailed_movie_rating_text">Detailed Movie Rating Text</string>
    <string name="detailed_movie_status_text">Detailed Movie Status Text</string>
    <string name="detailed_movie_tagline_text">Detailed Movie Tagline Text</string>
    <string name="detailed_movie_runtime_text">Detailed Movie Runtime Text</string>
    <string name="detailed_movie_title_text">Detailed Movie Title Text</string>
    <string name="detailed_movie_overview_text">Detailed Overview</string>
    <string name="detailed_movie_release_date_text">yyyy-MM-dd</string>

    <!-- Set Detailed Movie section title -->
    <string name="detailed_movie_overview_title">Overview</string>
    <string name="detailed_movie_release_date_title">Release Date</string>
    <string name="detailed_movie_genres_title">Genre(s)</string>
    <string name="detailed_movie_languages_text">Detailed Movie Language(s) Text</string>
    <string name="detailed_movie_languages_title">Language(s) spoken</string>
    <string name="detailed_movie_genres_text">Detailed Movie Genre(s) Text</string>

    <!-- Placeholder for unknown values in detail movies -->
    <string name="detailed_movie_unknown_title">Title Unknown</string>
    <string name="detailed_movie_unknown_tagline">Tagline Unknown</string>
    <string name="detailed_movie_unknown_status">Status Unknown</string>
    <string name="detailed_movie_unknown_runtime">Runtime Unknown</string>
    <string name="detailed_movie_default_value_ratings">0</string>
    <string name="detailed_movie_default_value_ratings_vote">0</string>
    <string name="detailed_movie_unknown_original_language">Original Language Unknown</string>
    <string name="detailed_movie_unknown_language">Languages Unknown</string>
    <string name="detailed_movie_unknown_genres">Genres Unknown</string>
    <string name="detailed_movie_unknown_release_date">Release Date Unknown</string>
    <string name="detailed_movie_unknown_overview">Overview Unknown</string>

    <!-- Set Detailed TV Show section title -->
    <string name="detailed_tv_show_overview_title">Overview</string>
    <string name="detailed_tv_show_first_air_date_title">First Air Date</string>
    <string name="detailed_tv_show_genres_title">Genre(s)</string>
    <string name="detailed_tv_show_networks_title">Network(s)</string>

    <!-- Placeholder for unknown values in detail TV Show -->
    <string name="detailed_tv_show_unknown_name">Name Unknown</string>
    <string name="detailed_tv_show_unknown_seasons">Seasons Unknown</string>
    <string name="detailed_tv_show_unknown_episodes">Episodes Unknown</string>
    <string name="detailed_tv_show_unknown_episodes_runtime">Episodes Runtime Unknown</string>
    <string name="detailed_tv_show_default_value_ratings">0</string>
    <string name="detailed_tv_show_default_value_ratings_vote">0</string>
    <string name="detailed_tv_show_unknown_original_language">Original Language Unknown</string>
    <string name="detailed_tv_show_unknown_networks">Networks Unknown</string>
    <string name="detailed_tv_show_unknown_genres">Genres Unknown</string>
    <string name="detailed_tv_show_unknown_first_air_date">First Air Date Unknown</string>
    <string name="detailed_tv_show_unknown_overview">Overview Unknown</string>


    <!-- Set Span movie item section title -->
    <string name="span_movie_item_ratings">Ratings :</string>
    <string name="span_movie_item_language">Language :</string>
    <string name="span_movie_item_release_date">Release Date :</string>

    <!-- Set Span TV Show item section title -->
    <string name="span_tv_show_item_ratings">Ratings :</string>
    <string name="span_tv_show_item_language">Language :</string>
    <string name="span_tv_show_item_first_air_date">First Air Date :</string>

    <!-- Set Span detailed movie item section title -->
    <string name="span_movie_detail_status">Status :</string>
    <string name="span_movie_detail_rating">Rating :</string>
    <string name="span_movie_detail_runtime">Runtime :</string>
    <string name="span_movie_detail_runtime_minutes">minute(s)</string>
    <string name="span_movie_detail_from">from</string>
    <string name="span_movie_detail_votes">vote(s)</string>

    <!-- Set Span detailed TV Show item section title -->
    <string name="span_tv_show_detail_number_of_seasons">Number of Seasons :</string>
    <string name="span_tv_show_detail_number_of_episodes">Number of Episodes :</string>
    <string name="span_tv_show_detail_runtime_episodes">Episodes Runtime :</string>
    <string name="span_tv_show_detail_runtime_episodes_minutes">minute(s)</string>
    <string name="span_tv_show_detail_rating">Rating :</string>
    <string name="span_tv_show_detail_from">from</string>
    <string name="span_tv_show_detail_votes">vote(s)</string>

    <string name="change_language_settings">Change Language Settings</string>

    <!-- Set Title for app menu -->
    <string name="catalogue_movie_final">Catalogue Movie Final</string>

    <string name="mark_as_favorite">Mark as Favorite</string>

    <!-- Text untuk favorite movie item widget -->
    <string name="favorite_movie_item_widget_text">Favorite Movie Item Widget</string>
    <string name="favorite_movie_item_empty_text">Empty Favorite Movie Item</string>

    <!-- String untuk represent title di setting -->
    <string name="alarm_setting_title">Alarm settings</string>

    <!-- String untuk menampung isi value dari setting preferences -->
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_summary">Reminder to return to app Catalogue Movie</string>
    <string name="daily_reminder_key">key_daily_reminder</string>
    <string name="release_movie_reminder_title">Release Movie Reminder</string>
    <string name="release_movie_reminder_summary">Reminder showing the movie that released today</string>
    <string name="release_movie_reminder_key">key_release_movie_reminder</string>

    <!-- String untuk menampung notification title dan subtitle di Alarm Manager -->
    <string name="daily_reminder_notif_title">Catalogue Movie</string>
    <string name="daily_reminder_notif_text">Catalogue Movie is missing you! Click to open the app!</string>
    <string name="release_today_reminder_notif_text_placeholder">has released today!</string>

    <!-- Value untuk empty state data -->
    <string name="no_movie_data_shown">There is no movie data to display</string>
    <string name="no_favorite_movie_data_shown">There is no favorite movie data to display</string>
    <string name="no_tv_show_data_shown">There is no TV show data to display</string>
    <string name="no_favorite_tv_show_data_shown">There is no favorite TV Show data to display</string>
    <string name="no_internet_connection">There is no internet connection</string>

    <!-- String untuk label detail activity -->
    <string name="detail_activity">Activity Detail</string>

    <!-- String untuk snackbar message -->
    <string name="insert_movie_favorite_snackbar">Insert movie item into database</string>
    <string name="remove_movie_favorite_snackbar">Remove movie item from database</string>
    <string name="insert_tv_show_favorite_snackbar">Insert TV show item into database</string>
    <string name="remove_tv_show_favorite_snackbar">Remove TV show item from database</string>

    <!-- String untuk toast message bahwa alarm diaktifkan/cancel -->
    <string name="add_daily_reminder">Add daily reminder alarm</string>
    <string name="cancel_daily_reminder">Cancel daily reminder alarm</string>
    <string name="add_release_today_reminder">Set release date today reminder alarm</string>
    <string name="cancel_release_today_reminder">Cancel release date today reminder alarm</string>

    <!-- String untuk content description -->
    <string name="poster_image_description">Poster Image</string>
</resources>
